manifests/argo/netpol-workflows-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: workflows-server
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows-server
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
          rules:
            http:
              - {}
    - fromEndpoints:
        - matchLabels:
            sensor-name: upgrade-k8s
        - matchLabels:
            sensor-name: pxe-sync
        - matchLabels:
            app.kubernetes.io/name: argo-workflows-workflow-controller
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kanidm
            io.kubernetes.pod.namespace: kanidm
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
